--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
     "extends": ["next/core-web-vitals", "eslint:recommended"],
     "rules": {
         "@next/next/no-img-element": 0
+    },
+    "globals": {
+        "Promise": "readonly"
     }
 }
