--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.2",
+    "eslint-config-next": "^13.5.2",
     "next": "^13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
