--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3033",
+    "dev": "next --turbo dev -p 3033",
     "build": "next build",
-    "start": "next dev -p 3033",
+    "start": "next dev --turbo -p 3033",
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "^13.5.2",
-    "next": "^13.5.2",
+    "axios": "^1.6.0",
+    "eslint": "8.52.0",
+    "eslint-config-next": "^14.0.0",
+    "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
