--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.0",
     "eslint": "8.52.0",
     "eslint-config-next": "^14.0.0",
+    "lodash": "^4.17.21",
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
